HIN-14-001 Hepdata entry

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Personal additions
+dNch-deta_eprint10111940.yaml
+
