--- a/text/HIN-14-001-yaml-files/submission.yaml
+++ b/text/HIN-14-001-yaml-files/submission.yaml
@@ -18,7 +18,7 @@ record_ids:
 ---
 additional_resources: []
 data_file: data1.yaml
-description: Jet spectra at $\sqrt{s_{NN}} =$ 5.02 TeV extrapolated from previous
+description: Jet spectra at $\sqrt{s} =$ 5.02 TeV extrapolated from previous
   pp measurement at $\sqrt{s} =$ 7 TeV in different $\eta$ ranges.
 keywords:
 - name: reactions
@@ -34,7 +34,7 @@ name: Table 1
 ---
 additional_resources: []
 data_file: data2.yaml
-description: Jet spectra at $\sqrt{s_{NN}} =$ 5.02 TeV extrapolated from previous
+description: Jet spectra at $\sqrt{s} =$ 5.02 TeV extrapolated from previous
   pp measurement at $\sqrt{s} =$ 7 TeV in different $\eta$ ranges.
 keywords:
 - name: reactions
@@ -50,7 +50,7 @@ name: Table 2
 ---
 additional_resources: []
 data_file: data3.yaml
-description: Jet spectra at $\sqrt{s_{NN}} =$ 5.02 TeV extrapolated from previous
+description: Jet spectra at $\sqrt{s} =$ 5.02 TeV extrapolated from previous
   pp measurement at $\sqrt{s} =$ 7 TeV in different $\eta$ ranges.
 keywords:
 - name: reactions
@@ -66,7 +66,7 @@ name: Table 3
 ---
 additional_resources: []
 data_file: data4.yaml
-description: Jet spectra at $\sqrt{s_{NN}} =$ 5.02 TeV extrapolated from previous
+description: Jet spectra at $\sqrt{s} =$ 5.02 TeV extrapolated from previous
   pp measurement at $\sqrt{s} =$ 7 TeV in different $\eta$ ranges.
 keywords:
 - name: reactions
